--- a/charts/templates/anythink-backend-deployment.yaml
+++ b/charts/templates/anythink-backend-deployment.yaml
@@ -29,6 +29,10 @@ spec:
               value: development
             - name: PORT
               value: "{{ .Values.backend.containerPort }}"
+            - name: NEW_RELIC_LICENSE_KEY
+              value: env[].valueFrom.new-relic-license-key
+            - name: NEW_RELIC_APP_NAME
+              value: Anythink Marketplace
           image: "{{ include "anythink-tenant.backendRepository" .}}:{{ .Values.backend.image.tag }}"
           imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
           name: {{ .Values.backend.serviceName }}
