--- a/charts/templates/anythink-backend-deployment.yaml
+++ b/charts/templates/anythink-backend-deployment.yaml
@@ -30,7 +30,10 @@ spec:
             - name: PORT
               value: "{{ .Values.backend.containerPort }}"
             - name: NEW_RELIC_LICENSE_KEY
-              value: env[].valueFrom.new-relic-license-key
+              valueFrom:
+                secretKeyRef:
+                  name: new-relic-license-key
+                  key: new-relic-license-key
             - name: NEW_RELIC_APP_NAME
               value: Anythink Marketplace
           image: "{{ include "anythink-tenant.backendRepository" .}}:{{ .Values.backend.image.tag }}"
