--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "stop": "lsof -ti :3000 | xargs kill"
   },
   "dependencies": {
+    "@datadog/datadog-api-client": "^1.12.0",
     "axios": "^0.25.0",
     "body-parser": "1.15.0",
     "cors": "2.7.1",
