--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
 	// which service AS DEFINED IN .devcontainer/docker-compose.yml 
 	// do we want VS Code to attach to?
 	// here, we choose the "php" service since that's where our code is executed
-    "service": "php",
+   //  "service": "php",
 
 	// we have multiple containers (nginx, PHP, MySQL, redis)
 	// so we'll use a compose .yml file instead of defining the services in devcontainer.json
-    "dockerComposeFile": "./docker-compose.yml",
+    // "dockerComposeFile": "./docker-compose.yml",
 
-	"shutdownAction": "stopCompose",
+	// "shutdownAction": "stopCompose",
 
 	// Mandatory definition for .devcontainer
 	//
