--- a/charts/templates/anythink-backend-deployment.yaml
+++ b/charts/templates/anythink-backend-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: APP_ENV
               value: dev
             - name: SECRET_KEY
-              value: e6F9KvSDf4dyXj
+              value: secret
             - name: DEBUG
               value: "True"
             - name: DATABASE_URL
