--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,16 @@
 {
-  "name": "GCP playground",
-  "image": "mcr.microsoft.com/vscode/devcontainers/python:3",
-  "features": {
-    "ghcr.io/devcontainers/features/sshd:1": {
-      "version": "latest"
+    "name": "Vector Search Node.js Workshop",
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:0-20",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "couchbase.vscode-couchbase"
+            ]
+        }
+    },
+    "postCreateCommand": "npm install && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && PATH=\"$HOME/.cargo/bin:$PATH\" && git clone https://github.com/couchbaselabs/couchbase-shell.git && cargo install --path ./couchbase-shell",
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {}
     }
-  },
-  "settings": {
-    "extensions.ignoreRecommendations": true,
-    "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Visual Studio Dark",
-    "workbench.colorCustomizations": {},
-    "workbench.welcomePage.walkthroughs.openOnInstall": false,
-    "workbench.welcomePage.experimental.videoTutorials": "off",
-    "github.codespaces.defaultExtensions": []
-  },
-  "postStartCommand": "bash -c .devcontainer/setup.sh"
-}
+  }
+  
