--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,7 @@
 {
   "name": "Wilco",
   "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
-  "forwardPorts": [3000, 3001, 3009],
-  "portsAttributes": {
-    "3000": {
-      "label": "Frontend",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
-    },
-    "3001": {
-      "label": "Backend",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
-    },
-    "3009": {
-      "label": "Wilco Agent",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
+    "features": {
+        "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
     }
-  }
 }
