--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,26 @@
         "vscode": {
             "extensions": ["GitHub.copilot", "GitHub.copilot-chat"]
         }
+    },
+    "forwardPorts": [3000, 5173, 3009],
+    "portsAttributes": {
+        "3000": {
+        "label": "Backend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "5173": {
+        "label": "Frontend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "3009": {
+        "label": "Wilco Agent",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        }
     }
 }
