--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,31 @@
 {
-    "name": "Anythink Development Container",
-    "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
-    "customizations": {
-        "vscode": {
-            "extensions": ["GitHub.copilot", "GitHub.copilot-chat"]
-        }
+  "name": "Python Development",
+  "image": "mcr.microsoft.com/devcontainers/python:3.11",
+  "forwardPorts": [8000, 6379],
+  "portsAttributes": {
+    "8000": {
+      "label": "Workflow",
+      "elevateIfNeeded": true,
+      "requireLocalPort": true,
+      "onAutoForward": "notify"
     },
-    "forwardPorts": [3000, 5173, 3009],
-    "portsAttributes": {
-        "3000": {
-        "label": "Backend",
-        "elevateIfNeeded": true,
-        "requireLocalPort": true,
-        "onAutoForward": "silent"
-        },
-        "5173": {
-        "label": "Frontend",
-        "elevateIfNeeded": true,
-        "requireLocalPort": true,
-        "onAutoForward": "silent"
-        },
-        "3009": {
-        "label": "Wilco Agent",
-        "elevateIfNeeded": true,
-        "requireLocalPort": true,
-        "onAutoForward": "silent"
-        }
+    "6379": {
+      "label": "Redis",
+      "onAutoForward": "silent"
     }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-python.python", "ms-python.vscode-pylance"]
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/python:1": {
+      "installTools": true
+    },
+    "ghcr.io/itsmechlark/features/redis-server:1": {
+      "version": "latest"
+    }
+  },
+  "postCreateCommand": "pip install --upgrade pip && bash .devcontainer/setup.sh"
 }
