--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,30 @@
 {
-  "name": "MongoDB Development Container",
-
-  "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
-  "forwardPorts": [27017, 3009],
-  "portsAttributes": {
-      "3009": {
-      "label": "Wilco Agent",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
-      }
-  },
-  "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {}
-  },
-  "postCreateCommand": ".devcontainer/setup.sh",
-  "remoteUser": "vscode"
+    "name": "Anythink Development Container",
+    "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
+    "customizations": {
+        "vscode": {
+            "extensions": ["GitHub.copilot", "GitHub.copilot-chat"]
+        }
+    },
+    "forwardPorts": [3000, 5173, 3009],
+    "portsAttributes": {
+        "3000": {
+        "label": "Backend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "5173": {
+        "label": "Frontend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "3009": {
+        "label": "Wilco Agent",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        }
+    }
 }
