--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,17 @@
 {
-  "name": "MongoDB Development Container",
-
-  "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
-  "forwardPorts": [27017],
-  "postCreateCommand": ".devcontainer/setup.sh",
-  "remoteUser": "vscode"
-}
+    "name": "Secure Info Concierge",
+    "image": "mcr.microsoft.com/devcontainers/python:3.9",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance"
+            ]
+        }
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    },
+    "forwardPorts": [8000],
+    "postCreateCommand": "bash .devcontainer/setup.sh"
+} 
