--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,28 @@
 {
-    "name": "Secure Info Concierge",
-    "image": "mcr.microsoft.com/devcontainers/python:3.9",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance"
-            ]
-        }
+  "name": "Go Quiz API Development Container",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "go-dev",
+  "workspaceFolder": "/workspace",
+  "customizations": {
+    "vscode": {
+      "extensions": ["golang.go", "GitHub.copilot", "GitHub.copilot-chat"]
+    }
+  },
+  "forwardPorts": [8080, 3009],
+  "portsAttributes": {
+    "8080": {
+      "label": "Go API Server",
+      "elevateIfNeeded": true,
+      "requireLocalPort": true,
+      "onAutoForward": "silent"
     },
-    "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-    },
-    "forwardPorts": [8000],
-    "postCreateCommand": "bash .devcontainer/setup.sh"
-} 
+    "3009": {
+      "label": "Wilco Agent",
+      "elevateIfNeeded": true,
+      "requireLocalPort": true,
+      "onAutoForward": "silent"
+    }
+  },
+  "postCreateCommand": ".devcontainer/setup.sh",
+  "remoteUser": "vscode"
+}
