--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,58 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
+# Go binaries
+*.exe
+*.dll
 *.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+*.dylib
+*.test
+*.out
 
-# Virtual Environment
-venv/
-ENV/
-env/
+# Dependencies
+vendor/
+go.work
+
+# Environment
+.env*
 
 # IDE
-.idea/
 .vscode/
-*.swp
-*.swo
+.idea/
 
-# Environment variables
-.env
-.env.*
-
-# Logs
-*.log
-
-# Local development
+# OS
 .DS_Store
-.coverage
-htmlcov/
-.pytest_cache/
+Thumbs.db
 
-# Docker
-.docker/
-docker-compose.override.yml 
+# Build
+/bin/
+/dist/
+
+# Docker volumes
+docker-volumes/
+# Go binaries
+*.exe
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+
+# Dependencies
+vendor/
+go.work
+
+# Environment
+.env*
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Build
+/bin/
+/dist/
+
+# Docker volumes
+docker-volumes/
