--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,10 @@
 {
-  "name": "Go Quiz API Development Container",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "go-dev",
-  "workspaceFolder": "/workspace",
-  "customizations": {
-    "vscode": {
-      "extensions": ["golang.go", "GitHub.copilot", "GitHub.copilot-chat"]
-    }
+  "name": "Go Development Container",
+  "image": "mcr.microsoft.com/devcontainers/go:1-1.24-bookworm",
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
-  "forwardPorts": [8080, 3009],
+  "forwardPorts": [8080, 5432],
   "portsAttributes": {
     "8080": {
       "label": "Go API Server",
@@ -16,13 +12,23 @@
       "requireLocalPort": true,
       "onAutoForward": "silent"
     },
-    "3009": {
-      "label": "Wilco Agent",
+    "5432": {
+      "label": "PostgreSQL Database",
       "elevateIfNeeded": true,
-      "requireLocalPort": true,
+      "requireLocalPort": false,
       "onAutoForward": "silent"
     }
   },
-  "postCreateCommand": ".devcontainer/setup.sh",
-  "remoteUser": "vscode"
+  "postCreateCommand": "bash .devcontainer/setup.sh",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "golang.go", 
+        "GitHub.copilot", 
+        "GitHub.copilot-chat",
+        "ms-vscode.vscode-json",
+        "ckolkman.vscode-postgres"
+      ]
+    }
+  }
 }
