--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,39 +1,30 @@
 {
-	"name": "Go & PostgreSQL",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	
-	"features": {
-		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/trywilco/anythink-market-docker-images/wilco-agent:latest": {}
-	},
-	"forwardPorts": [8080, 5432],
-	"portsAttributes": {
-		"8080": {
-			"label": "Go API Server",
-			"elevateIfNeeded": true,
-			"requireLocalPort": true,
-			"onAutoForward": "silent"
-		},
-		"5432": {
-			"label": "PostgreSQL Database",
-			"elevateIfNeeded": true,
-			"requireLocalPort": false,
-			"onAutoForward": "silent"
-		}
-	},
-	"postCreateCommand": "bash .devcontainer/setup.sh",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"golang.go",
-				"GitHub.copilot",
-				"GitHub.copilot-chat",
-				"ms-vscode.vscode-json",
-				"ckolkman.vscode-postgres"
-			]
-		}
-	},
-	"remoteUser": "vscode"
+    "name": "Anythink Development Container",
+    "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
+    "customizations": {
+        "vscode": {
+            "extensions": ["GitHub.copilot", "GitHub.copilot-chat"]
+        }
+    },
+    "forwardPorts": [3000, 5173, 3009],
+    "portsAttributes": {
+        "3000": {
+        "label": "Backend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "5173": {
+        "label": "Frontend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "3009": {
+        "label": "Wilco Agent",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        }
+    }
 }
