--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,20 @@
 {
-  "name": "GCP playground",
-  "image": "mcr.microsoft.com/vscode/devcontainers/python:3",
-  "features": {
-    "ghcr.io/devcontainers/features/sshd:1": {
-      "version": "latest"
+  "name": "Python playground",
+  "image": "mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
+  "customizations": {
+    "codespaces": {
+      "openFiles": []
+    },
+    "vscode": {
+      "settings": {
+        "extensions.ignoreRecommendations": true,
+        "workbench.startupEditor": "none",
+        "workbench.welcomePage.walkthroughs.openOnInstall": false,
+        "workbench.welcomePage.experimental.videoTutorials": "off",
+        "github.codespaces.defaultExtensions": []
+      },
+      "extensions": ["ms-toolsai.jupyter", "ms-python.python"]
     }
-  },
-  "settings": {
-    "extensions.ignoreRecommendations": true,
-    "workbench.startupEditor": "none",
-    "workbench.colorTheme": "Visual Studio Dark",
-    "workbench.colorCustomizations": {},
-    "workbench.welcomePage.walkthroughs.openOnInstall": false,
-    "workbench.welcomePage.experimental.videoTutorials": "off",
-    "github.codespaces.defaultExtensions": []
   },
   "postStartCommand": "bash -c .devcontainer/setup.sh"
 }
