--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,20 @@
 {
-  "name": "Wilco",
-  "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
-  "forwardPorts": [3000, 3001, 3009],
-  "portsAttributes": {
-    "3000": {
-      "label": "Frontend",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
+  "name": "Python playground",
+  "image": "mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
+  "customizations": {
+    "codespaces": {
+      "openFiles": []
     },
-    "3001": {
-      "label": "Backend",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
-    },
-    "3009": {
-      "label": "Wilco Agent",
-      "elevateIfNeeded": true,
-      "requireLocalPort": true,
-      "onAutoForward": "silent"
+    "vscode": {
+      "settings": {
+        "extensions.ignoreRecommendations": true,
+        "workbench.startupEditor": "none",
+        "workbench.welcomePage.walkthroughs.openOnInstall": false,
+        "workbench.welcomePage.experimental.videoTutorials": "off",
+        "github.codespaces.defaultExtensions": []
+      },
+      "extensions": ["ms-toolsai.jupyter", "ms-python.python"]
     }
   },
-  "postCreateCommand": "bash .devcontainer/setup.sh"
+  "postStartCommand": "bash -c .devcontainer/setup.sh"
 }
