--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,30 @@
 {
-  "name": "Python playground",
-  "image": "mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
-  "customizations": {
-    "codespaces": {
-      "openFiles": []
+    "name": "Anythink Development Container",
+    "image": "public.ecr.aws/v0a2l7y2/wilco/anythink-devcontainer:latest",
+    "customizations": {
+        "vscode": {
+            "extensions": ["GitHub.copilot", "GitHub.copilot-chat"]
+        }
     },
-    "vscode": {
-      "settings": {
-        "extensions.ignoreRecommendations": true,
-        "workbench.startupEditor": "none",
-        "workbench.welcomePage.walkthroughs.openOnInstall": false,
-        "workbench.welcomePage.experimental.videoTutorials": "off",
-        "github.codespaces.defaultExtensions": []
-      },
-      "extensions": ["ms-toolsai.jupyter", "ms-python.python"]
+    "forwardPorts": [3000, 5173, 3009],
+    "portsAttributes": {
+        "3000": {
+        "label": "Backend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "5173": {
+        "label": "Frontend",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        },
+        "3009": {
+        "label": "Wilco Agent",
+        "elevateIfNeeded": true,
+        "requireLocalPort": true,
+        "onAutoForward": "silent"
+        }
     }
-  },
-  "postStartCommand": "bash -c .devcontainer/setup.sh"
 }
