Add ESLint linting and test coverage enforcement
- Add ESLint configuration with standard rules
- Configure Jest with 80% coverage threshold
- Update CI workflow to fail on lint errors or low coverage
- Add npm scripts for linting and testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,10 @@ jobs:
         node-version: '18'
         
     - name: Install dependencies
-      run: npm install
-      
-    - name: Run tests
-      run: npm test
+      run: npm ci
+
+    - name: Run ESLint
+      run: npx eslint .
+
+    - name: Run tests with coverage
+      run: npm test -- --coverage --coverageThreshold.global.statements=80
