--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "src/index.js",
     "scripts": {
         "test": "jest",
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
     },
     "keywords": [
         "github-actions",
@@ -15,6 +17,23 @@
     "author": "Wilco Quest",
     "license": "MIT",
     "devDependencies": {
+        "eslint": "^8.57.0",
         "jest": "^29.7.0"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "coverageReporters": [
+            "text",
+            "lcov",
+            "html"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "statements": 80,
+                "branches": 80,
+                "functions": 80,
+                "lines": 80
+            }
+        }
     }
 }
