--- a/.github/actions/label-pr-by-directory/package.json
+++ b/.github/actions/label-pr-by-directory/package.json
@@ -4,6 +4,7 @@
   "description": "GitHub Action to automatically label PRs based on directory changes",
   "main": "index.js",
   "scripts": {
+    "build": "ncc build index.js -o dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,5 +18,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.4"
   }
 }
