--- a/.github/workflows/ask-ai.yml
+++ b/.github/workflows/ask-ai.yml
@@ -11,14 +11,16 @@ permissions:
 jobs:
   ask-ai:
     runs-on: ubuntu-latest
+
     steps:
-      - id: ai-response
-        uses: actions/ai-inference@v1.2.8
+      - name: AI Inference
+        id: ai-response
+        uses: actions/ai-inference@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          endpoint: https://models.github.ai/orgs/Wilcolab/inference
           prompt: |
-            Give me a witty programming zinger suitable for a developer audience.
+            Give me a programming joke.
+
       - name: Display AI Response
         run: |
           echo "## 🤖 AI Response" >> $GITHUB_STEP_SUMMARY
